# Operacao-PCP

./: README.md  pyproject.toml
src/toolbox/: ToolboxApp.py  __main__.py  abreRequisicoes.py  core.py  exportaBases.py  tabelaChefe.py  totvsTools.py
